[Kubernetes]/Prometheus/kube-prometheus-stack-82.10.2/kube-prometheus-stack/templates/prometheus-eks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-alb-ingress2
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/success-codes: "200-399"

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: test-prometheus-grafana
                port:
                  number: 80

          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: test-prometheus-kube-prome-prometheus
                port:
                  number: 9090

          - path: /alertmanager
            pathType: Prefix
            backend:
              service:
                name: test-prometheus-kube-prome-alertmanager
                port:
                  number: 9093
